Fix fullscreen navbar on mobile

--- a/components/Layout/MobileHeader.module.scss
+++ b/components/Layout/MobileHeader.module.scss
@@ -5,11 +5,11 @@
   z-index: $z-index-fixed-navigation;
 }
 
-.modal {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 250px;
+.open {
+  display: block;
+}
+.close {
+  display: none;
 }
 
 @media only screen and (max-width: $breakpoint-desktop-s) {
@@ -18,8 +18,10 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px 30px;
+    padding-left: 16px;
     position: fixed;
     width: 100%;
+    height: 70px;
   }
 
   .lightContainer {
